<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:fangyi="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:baselineAligned="false"
              android:orientation="vertical">

    <TextView
        android:id="@+id/activity_taskmanager_settring_title"
        android:text="@string/activity_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/cb_show_system_process"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center|center_vertical"
        android:text="@string/status_show_system_activities"
        android:textColor="#000000"
        android:textSize="25sp" />

    <CheckBox
        android:id="@+id/cb_kill_process"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center|center_vertical"
        android:text="@string/status_keep_activities_when_screen_locked"
        android:textColor="#000000"
        android:textSize="25sp" />


</LinearLayout>