<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_task_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/task_icon"
        android:src="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/tv_task_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/iv_task_icon"
        android:layout_toRightOf="@+id/iv_task_icon"
        android:text="@string/task_info"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_meninfosize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_task_name"
        android:layout_alignStart="@+id/tv_task_name"
        android:layout_alignLeft="@+id/tv_task_name"
        android:layout_marginTop="5dp"
        android:text="@string/ram_used"
        android:textColor="#88000000"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/cr_taskmanager_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false" />

</RelativeLayout>